1_kubernetes_mastery/1.1_gpu_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gpu-pod
spec:
  nodeSelector:
    env: prod
    accelerator: nvidia
  containers:
    - name: app-container
      image: nvidia/cuda:11.8.0-base
      command: ["sleep", "3600"]
      resources:
        requests:
          memory: "500Mi"
          cpu: "250m"
        limits:
          memory: "2Gi"
          cpu: "1"
      volumeMounts:
        - name: secrets
          mountPath: "/etc/secrets"
          readOnly: true
  volumes:
    - name: secrets
      secret:
        secretName: app-secrets
  tolerations:
    - key: "nvidia.com/gpu"
      operator: "Exists"
      effect: "NoSchedule"
  priorityClassName: "system-cluster-critical"
